# fastapi_petproject

./: .env  LICENSE  config.py  database.py  exceptions.py  main.py  pyproject.toml  schemas.py
booking/: dao.py  models.py  router.py
hotels/: models.py  router.py
migrations/: env.py
migrations/versions/: 171b63baeb15_initial_db.py  4d0aeb986b8e_new.py  72bc43126fd9_update_users_id.py  96ac53eb3063_new_version_of_tables.py
services/: base.py
users/: auth.py  dependencies.py  models.py  router.py  schemas.py
